css/ariel-chen-portfolio.webflow.css
/* ... */
.work-collection-list {
  position: relative;
}

.video {
  margin-bottom: 20px;
}

.link-2 {
  z-index: 10;
  position: relative;
}

.link-3 {
  position: relative;
}

@media screen and (max-width: 991px) {
  .top-margin---medium-space {
    margin-top: 80px;
  }

  .text---heading-large {
    font-size: 17.386vw;
  }

  .navbar {
    margin-top: 25px;
  }

  .nav-link-list {
    display: none;
  }

  .divider {
    height: 20px;
  }

  .top-margin---small-space {
    margin-top: 50px;
  }

  .scroll-anchor-link {
    grid-column-gap: 4px;
    grid-row-gap: 4px;
    grid-template-rows: auto auto;
    grid-template-columns: 1fr 1fr;
    grid-auto-columns: 1fr;
    justify-content: flex-end;
    align-items: center;
    padding-top: 20px;
    padding-left: 0;
    display: flex;
  }

  .nav-menu-button {
    grid-column-gap: 15px;
    grid-row-gap: 15px;
    cursor: pointer;
    justify-content: flex-start;
    align-items: center;
    display: block;
  }

  .top-margin---large-space {
    margin-top: 95px;
  }

  .stat-list {
    margin-top: 40px;
  }

  .stat-block {
    padding-top: 40px;
    padding-bottom: 40px;
  }

  .text---heading {
    font-size: 80px;
  }

  .footer {
    padding-bottom: 25px;
  }

  .top-margin---extra-large-space {
    margin-top: 150px;
  }

  .work-divider {
    height: 15px;
  }

  .work-image {
    aspect-ratio: 1.423;
  }

  .top-margin---extra-small-space {
    margin-top: 35px;
  }

  .colors-list {
    grid-template-columns: 1fr 1fr 1fr;
  }

  .color-block {
    height: 16.5vw;
  }

  .typography-list {
    grid-template-columns: 1fr;
  }

  .cursor-button {
    width: 100px;
    height: 100px;
  }

  .container---navbar {
    position: relative;
  }

  .menu-wrap {
    z-index: 1;
    display: block;
    position: relative;
  }

  .menu-link-list {
    display: flex;
  }

  .menu {
    z-index: 5;
    background-color: var(--background);
    padding-top: 25px;
    padding-bottom: 25px;
    transform: translate(0, -100%);
  }

  .menu-overlay {
    background-color: var(--background);
    height: 100%;
    display: none;
    position: absolute;
    inset: 0% 0% auto;
    transform: translate(0, -100%);
  }

  .menu-container {
    position: absolute;
    inset: 0% 0% auto;
    overflow: hidden;
  }

  .open-button {
    grid-column-gap: 15px;
    grid-row-gap: 15px;
    cursor: pointer;
    justify-content: flex-end;
    align-items: center;
    display: flex;
  }

  .close-button {
    grid-column-gap: 15px;
    grid-row-gap: 15px;
    cursor: pointer;
    justify-content: flex-end;
    align-items: center;
    display: none;
  }

  .video {
    margin-bottom: 20px;
  }
}

@media screen and (max-width: 767px) {
  .section {
    margin-left: 20px;
    margin-right: 20px;
  }

  .grid {
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
  }

  .top-margin---medium-space {
    margin-top: 75px;
  }

  .text---heading-large {
    font-size: 18vw;
  }

  .navbar {
    margin-left: 20px;
    margin-right: 20px;
  }

  .top-margin---small-space {
    margin-top: 55px;
  }

  .intro-image-container {
    flex-flow: column;
  }

  .scroll-anchor-link {
    justify-content: flex-end;
    align-items: center;
    padding-left: 0;
    padding-right: 10px;
  }

  .top-margin---large-space {
    margin-top: 90px;
  }

  .stat-list {
    margin-top: 35px;
  }

  .footer {
    margin-left: 20px;
    margin-right: 20px;
  }

  .top-margin---extra-large-space {
    margin-top: 90px;
  }

  .color-block {
    height: 19vw;
  }

  .section---intro {
    margin-left: 20px;
    margin-right: 20px;
  }

  .cursor-container {
    display: none;
  }
}

@media screen and (max-width: 479px) {
  .section {
    margin-left: 15px;
    margin-right: 15px;
  }

  .grid {
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }

  .top-margin---medium-space {
    margin-top: 70px;
  }

  .text---heading-large {
    font-size: 25.581vw;
  }

  .navbar {
    margin-left: 15px;
    margin-right: 15px;
  }

  .top-margin---small-space {
    margin-top: 40px;
  }

  .section-title {
    margin-bottom: 25px;
  }

  .team-image {
    margin-top: -5px;
  }

  .scroll-anchor-link {
    display: none;
  }

  .top-margin---large-space {
    margin-top: 85px;
  }

  .stat-list {
    margin-top: 30px;
  }

  .stat-block {
    padding-top: 35px;
    padding-bottom: 35px;
  }

  .text---heading {
    font-size: 75px;
  }

  .footer {
    margin-left: 15px;
    margin-right: 15px;
  }

  .fooer-link-list {
    grid-column-gap: 20px;
    grid-row-gap: 20px;
    grid-template-rows: auto;
    grid-template-columns: 1fr 1fr 1fr;
    grid-auto-columns: 1fr;
    display: grid;
  }

  .top-margin---extra-large-space {
    margin-top: 135px;
  }

  .hidden-on-mobile {
    display: none;
  }

  .intro-display-wrap {
    margin-bottom: 10px;
    position: relative;
    overflow: hidden;
  }

  .work-image {
    aspect-ratio: 1.08;
    margin-top: -5px;
  }

  .top-margin---extra-small-space {
    margin-top: 25px;
  }

  .arrow-text {
    display: flex;
  }

  .color-block {
    height: 26vw;
  }

  .section---intro {
    margin-left: 15px;
    margin-right: 15px;
  }

  .utility-page-content {
    padding-left: 15px;
    padding-right: 15px;
  }
}

#w-node-e612dbdf-ac6b-e4d0-c172-06d65f1e8c95-ea14f80c, #w-node-_12bb8ae9-2df0-a8fc-4f42-18f50d9d92db-ea14f80c {
  grid-area: span 1 / span 14 / span 1 / span 14;
}

#w-node-_599791bd-fbb2-a843-c8fe-ae97e5c4dc27-ea14f80c {
  grid-area: span 1 / span 2 / span 1 / span 2;
  place-self: end;
}

#w-node-_283cea23-21bd-66a7-92a5-689320e28e51-ea14f80c {
  grid-area: span 1 / span 16 / span 1 / span 16;
}

#w-node-_156049b4-0bfc-c366-153b-5acec84c7937-ea14f80c {
  grid-area: span 1 / span 8 / span 1 / span 8;
  align-self: start;
}

#w-node-_6e3af7fa-72d0-4fb3-bf72-0d38bb42db6b-ea14f80c {
  grid-area: span 1 / span 6 / span 1 / span 6;
}
/* ... */

